update endpoint name
